--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -30,6 +30,15 @@ nav {
     */
 }/* height: 180px;  margin: 0px auto;*/
 
+#spinner {
+    display: block;
+    position: absolute;
+    left: 45%;
+    top: 10%;
+    background-color: #fff;
+    z-index: 900;
+}
+
 #mapInfo {
     width: fit-content;
     height: 30%;
@@ -39,7 +48,7 @@ nav {
     align-items: center;
     position: absolute;
     right: 5px;
-    top: 5px;
+    bottom: 5px;
     z-index: 100;
     background-color: #fff;
     border-radius: 25px;
