--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -26,6 +26,8 @@ nav div ul li p {
 
 .mainDiv {
     position: relative; 
+    height: 100vh;
+    overflow: hidden;
     /*
     width: 100%; 
     height: 100vh;
