--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,6 +19,50 @@ nav div ul li p {
     padding: 0px;
 }
 
+.CountriesDropDownListDiv {
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 999999;
+    
+}
+
+.CountriesDropDownList {
+    background-color: black;
+    color: white;
+}
+
+/*
+.CountriesDropDownList option{
+    background-color: red;
+    color: yellow;
+    
+}
+
+#navDropDown option-selected {
+    background-color: yellowgreen;
+}
+/*
+select {
+   -webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none;       /* Remove default arrow 
+   background-image: url(...);   /* Add custom arrow 
+}
+
+.CountriesDropDownListDiv-selected:after {
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent;
+  }
+*/
+
 .appTitle {
     font-family: 'Lemonada', cursive;
     font-weight: 600;
@@ -37,7 +81,7 @@ nav div ul li p {
 .mapDiv {
     position: relative; 
     width: 100%; 
-    height: 95vh;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -108,6 +152,19 @@ nav div ul li p {
     width: 99vw;
     border: 1px dashed darkblue;
 }
+/*Bootstrap table*/
+#countryName {
+    text-align: center;
+}
+#borders {
+    list-style: none;
+    padding: 0px;
+}
+#languages {
+    list-style: none;
+    padding: 0px;
+}
+
 
 /*Popup*/
 .tablePopup {
@@ -321,7 +378,44 @@ nav div ul li p {
     padding-right: 10px;
 }
 
-/*Preloader*/
+
+/* -------------------------------------------NEWS------------------------------------------ */
+.newsTitle {
+    font-size: large;
+    font-family: 'Roboto', sans-serif;
+}
+.newsPaper {
+    font-weight: 600;
+    font-family: 'lemonada';
+}
+.newsDesc {
+    color: #333;
+    /*
+    -webkit-text-stroke-width: 0.25px;
+    -webkit-text-stroke-color: black;
+    */
+    background-color: white;
+    border: 0.5px solid black;
+}
+.author {
+    width: 100%;
+    color: #444;
+    font-weight: 600;
+    display: block;
+    text-align: right;
+}
+.link {
+    display: inline-block;
+    color: blue;
+    font-style: italic;
+}
+.newsImage {
+    width: 100%;
+    padding-right: 10px;
+    margin-bottom: 10px;
+}
+
+/*----------------------------------------------------Preloader------------------------------------------------------*/
 .loaderDiv {
     display: none;
     flex-direction: column;
@@ -329,8 +423,9 @@ nav div ul li p {
     align-items: center;
     width: 11em;
     position: absolute;
-    left: 20%;
-    top: 100px;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 300;
     background-color: #fff;
     border-radius: 15px;
